feat: Adds option for choosing between Mac and Windows display in example.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   ionicons: ^0.1.2
+  material_design_icons_flutter: 6.0.7096
   stockholm:
     path: ..
 
